第1章：网络基础知识

--- a/第1章：网络基础知识.md
+++ b/第1章：网络基础知识.md
@@ -16,4 +16,83 @@
 
 
 
-​                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                   
+### 5. 协议分层与 OSI 参考模型
+
+#### 5.3 OSI 参考模型
+
+| 7    | 应用层     |
+| :--- | ---------- |
+| 6    | 表示层     |
+| 5    | 会话层     |
+| 4    | 传输层     |
+| 3    | 网络层     |
+| 2    | 数据链路层 |
+| 1    | 物理层     |
+
+​                        
+
+### 7. 传输方式的分类
+
+ #### 7.1 面向有连接型与面向无连接型
+
+#### 7.2 电路交换与分组交换
+
+#### 7.3 根据接收端数量分类
+
+1. 单播
+2. 广播
+3. 多播
+4. 任播
+
+
+
+### 8. 地址
+
+#### 8.1 地址的唯一性
+
+#### 8.2  地址的层次性
+
+MAC 地址不具有层次性
+
+IP 地址具有层次性
+
+MAC 地址由设备的制造厂商针对每块网卡进行分别指定。
+
+
+
+### 9. 网络的构成要素
+
+#### 9.1 通信媒介与数据链路
+
+传输速率，单位为 bps。因此，即使数据链路的传输速率不相同，也不会出现传输的速度忽快忽慢的情况。传输速率高也不是指单位数据流动的速度有多快，而是指单位时间内传输的数据量有多少。
+
+传输速率有称作带宽，带宽越大网络传输能力就越强。
+
+#### 9.2 网卡
+
+任意一台计算机连接网络时，必须要使用网卡（全称为网络接口卡）。网络接口卡（NIC）有时也被叫做网络适配器、网卡、LAN 卡。
+
+ 
+
+#### 9.3 中继器
+
+
+
+#### 9.4 网桥/2层交换机
+
+MAC 地址处理
+
+
+
+#### 9.5 路由器/3 层交换机
+
+​                                                                                                                                                 
+
+#### 9.6 4 ~ 7 层交换机
+
+
+
+#### 9.7 网关
+
+
+
