--- a/第3章：数据链路.md
+++ b/第3章：数据链路.md
@@ -244,6 +244,8 @@ PPP 可以使用电话线或 ISBN、专线、ATM 线路。
 
 #### 5.3 PPP 的帧格式
 
+HDLC 就是在每个帧的前后加上一个 8 位字节 ”01111110“ 用来区分帧。这一个 8 位字节叫做 **`标识码`** 。在两个标识码中间不允许出现连续 **`6`**  个以上的 ”1“。因此，在发送帧的时候，当出现连续 5 个 ”1” 时后面必须插入一个 0。而当接收端在接收数据帧时，如果收到连续的 5 个 “1” 且后面跟着的是 0，就必须删除。由于最多只会出现 5 个连续的 "1"，就可以比较容易地通过标识码区分帧的起始与终止。而 PPP 标准帧格式与此完全相同。
+
 ![](https://github.com/WqhForGitHub/TCP-IP-HTTP/blob/%E5%9B%BE%E8%A7%A3TCP/IP/static/Chapter3/PPP.png?raw=true)
 
 #### 5.4 PPPoE
